# SiNC-rPPG

./: .gitignore  INSTRUCTIONS.md  Proposed Cleanup.md  README.md  pyproject.toml  requirements.txt
conf/: config.yaml
conf/dataset/: mixed_supervised.yaml  mixed_unsupervised.yaml  pure_supervised.yaml  pure_testing.yaml  pure_unsupervised.yaml  ubfc_supervised.yaml  ubfc_testing.yaml  ubfc_unsupervised.yaml
conf/model/: physnet.yaml  rpnet.yaml
conf/paths/: default.yaml
conf/training/: default.yaml
data/: README.md
docs/: ADDING_A_DATASET.md
scripts/: run_experiments.py
src/: args.py  config_merge.py  repo_paths.py  test.py  train.py
src/datasets/: PURE.py  PURE_supervised.py  PURE_testing.py  PURE_unsupervised.py  UBFC.py  UBFC_supervised.py  UBFC_testing.py  UBFC_unsupervised.py  base.py  cross_domain.py  dataset_registry.py  mixed_train.py  path_utils.py  transforms.py  utils.py
src/engine/: __init__.py  evaluation.py  lightning_train.py  trainer.py
src/models/: PhysNet.py  RPNet.py
src/preprocessing/: __init__.py  face_detector.py  mesh_common.py  utils.py
src/utils/: checkpoint_manifest.py  losses.py  metrics.py  model_registry.py  model_selector.py  model_utils.py  optimization.py  postprocess.py  read_predictions_pickle.py  registry.py  torch_device.py  (+2 more)
tests/: test_args_format.py  test_checkpoint_manifest.py  test_cross_domain.py  test_evaluation_testing_dataset.py  test_face_detector_registry.py  test_flatten_ragged.py  test_hydra_config.py  test_metrics.py  test_mixed_train_dataset.py  test_optional_wave_npz.py  test_physnet_smoke.py
(+6 files in other folders)
